<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfilFragment"
    android:background="@drawable/profil">

    <EditText
        android:id="@+id/ime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ime"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/prezime"
        android:layout_margin="20dp"
        android:textColor="#FF000000"/>

    <EditText
        android:id="@+id/prezime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/prezime"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ime"
        android:layout_margin="20dp"
        android:textColor="#FF000000"/>

    <TextView
        android:id="@+id/tekstOKorisniku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oKorisniku"
        android:textColor="#FF000000"
        app:layout_constraintTop_toBottomOf="@id/prezime"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20dp"
        android:layout_marginBottom="0dp"/>
    <EditText
        android:id="@+id/oKorisniku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/oKorisniku"
        app:layout_constraintTop_toBottomOf="@id/tekstOKorisniku"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20dp"
        android:layout_marginTop="0dp"
        android:textColor="#FF000000"
        />

    <TextView
        android:id="@+id/citat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/citat"
        android:textColor="#FF000000"
        android:textSize="40dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/oKorisniku"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sacuvajPromjene"
        android:layout_margin="20dp"
        android:layout_marginBottom="0dp"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/sacuvajPromjene"
        android:text="@string/button_sacuvaj"
        android:layout_width="100dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorPrimary__"
        />

</androidx.constraintlayout.widget.ConstraintLayout>